Fix cherry-pick conflict
(cherry picked from commit 7b1a81dae0fa0225165f86a8d12d2a7d34f32aed)