@@ -25,6 +25,7 @@ import io.jsonwebtoken.SignatureAlgorithm;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.Base64;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 import java.util.UUID;
@@ -262,7 +263,7 @@ public class AuthorizationWithAuthDataTest extends MockedPulsarServiceBaseTest {
     @Test
     public void testAdmin() throws PulsarAdminException {
         admin.tenants().createTenant("test-tenant-1",
-                TenantInfo.builder().allowedClusters(Set.of(configClusterName)).build());
+                TenantInfo.builder().allowedClusters(Collections.singleton(configClusterName)).build());
         admin.namespaces().createNamespace("test-tenant-1/test-namespace-1");
         String partitionedTopic = UUID.randomUUID().toString();
         admin.topics().createPartitionedTopic(partitionedTopic,3);
